logs/train/20250325030250.txt
  File "/home/changc/TrafficFormer/data_generation/finetuning_data_gen.py", line 23
    from path
             ^
SyntaxError: invalid syntax
